legend-pure-parser/examples/errors/02_missing_semicolons.pure
###Pure

// ERROR: Missing semicolons after property declarations
Class model::errors::MissingSemicolons
{
  name: String[1]
  age: Integer[1]
  active: Boolean[1]
}
